--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"><![CDATA[
-
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content">
-
-
-    ]]>
-
+    tools:context=".MainActivity">
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="300dp"
